# OpCoreExample

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
data/: real.csv  result.csv
embedded/: CMakeLists.txt  test.c
embedded/include/: Matrix.h  Vector.h
embedded/src/: Matrix.c  Vector.c
opcore/: CMakeLists.txt  README.md  cmake_install.cmake
opcore/examples/: MatrixAndVector.cpp
opcore/include/Filters/: KalmanFusion.h
opcore/include/OpCore/: Matrix.h  Matrix.tpp  Vector.h  Vector.tpp
opcore/include/config/: KalmanParams.h
opcore/src/Filters/: KalmanFusion.cpp
opcore/test/: test_matrix.cpp  test_vector.cpp
scripts/: plotResults.py  runTestLinux.sh  runTestWindows.bat
src/: main.cpp
